--- a/azure_function_apps/ContactFormHttpTrigger/requirements.txt
+++ b/azure_function_apps/ContactFormHttpTrigger/requirements.txt
@@ -1,18 +1,28 @@
 attrs==22.2.0 ; python_version >= "3.10" and python_version < "4.0"
+azure-common==1.1.28 ; python_version >= "3.10" and python_version < "4.0"
+azure-communication-email==1.0.0b1 ; python_version >= "3.10" and python_version < "4.0"
+azure-core==1.26.2 ; python_version >= "3.10" and python_version < "4.0"
 azure-functions==1.12.0 ; python_version >= "3.10" and python_version < "4.0"
+azure-mgmt-core==1.3.2 ; python_version >= "3.10" and python_version < "4.0"
+certifi==2022.12.7 ; python_version >= "3.10" and python_version < "4.0"
 cffi==1.15.1 ; python_version >= "3.10" and python_version < "4.0"
 chardet==5.1.0 ; python_version >= "3.10" and python_version < "4.0"
+charset-normalizer==2.1.1 ; python_version >= "3.10" and python_version < "4"
 cryptography==39.0.0 ; python_version >= "3.10" and python_version < "4.0"
 flanker==0.9.11 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.10" and python_version < "4.0"
+isodate==0.6.1 ; python_version >= "3.10" and python_version < "4.0"
+msrest==0.7.1 ; python_version >= "3.10" and python_version < "4.0"
+oauthlib==3.2.2 ; python_version >= "3.10" and python_version < "4.0"
 ply==3.11 ; python_version >= "3.10" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0"
-python-http-client==3.3.7 ; python_version >= "3.10" and python_version < "4.0"
 regex==2022.10.31 ; python_version >= "3.10" and python_version < "4.0"
-sendgrid==6.9.7 ; python_version >= "3.10" and python_version < "4.0"
+requests-oauthlib==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
+requests==2.28.1 ; python_version >= "3.10" and python_version < "4"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
-starkbank-ecdsa==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
 tld==0.12.6 ; python_version >= "3.10" and python_version < "4"
+typing-extensions==4.4.0 ; python_version >= "3.10" and python_version < "4.0"
+urllib3==1.26.13 ; python_version >= "3.10" and python_version < "4"
 webob==1.8.7 ; python_version >= "3.10" and python_version < "4.0"
 
 # Do not include azure-functions-worker in this file
