--- a/_config.yml
+++ b/_config.yml
@@ -12,66 +12,27 @@ author:
   name: My Name
   email: mail@tombarone.net
   url: https://tombarone.net
-  #twitter: # twitter username without the @ symbol
-#social:
-#  name: Hydra Template
-#  links:
-#    - https://github.com/CloudCannon/hydra-jekyll-template
-
-# -----
-# Build
-
-timezone: Australia/Adelaide
 
 collections:
   staff_members:
-    _hide_content: true
-
-paginate: 10
-paginate_path: "/blog/:num/"
-permalink: pretty
+    people: true
 
 defaults:
   - scope:
-      path: ""
-      type: "posts"
+      path: "/assets/icons"
     values:
-      layout: "post"
-      _options:
-        content:
-          width: 1500
-          height: 2500
-  - scope:
-      path: ""
-      type: "staff_members"
-    values:
-      _options:
-        image_path:
-          width: 600
-          height: 600
-  - scope:
-      path: ""
-    values:
-      layout: "page"
-  - scope:
-      path: "index.html"
-    values:
-      layout: "default"
-  - scope:
-      path: "contact.html"
-    values:
-      full_width: true
+      output: true
+      # Stick all the icon files and things into the root folder on build
+      permalink: /
 
-jekyll-archives:
-  enabled:
-    - categories
+email_endpoint: "https://attc-website-email-trigger.azurewebsites.net"
+
+timezone: Australia/Adelaide
 
 plugins:
-  - jekyll-archives
   - jekyll-sitemap
   - jekyll-seo-tag
   - jekyll-feed
-  - jekyll-paginate
 
 exclude:
   - Gemfile
