--- a/.github/workflows/continuous-integration-and-deployment.yml
+++ b/.github/workflows/continuous-integration-and-deployment.yml
@@ -24,6 +24,7 @@ jobs:
       - name: 'Install Ruby and gems'
         uses: 'ruby/setup-ruby@v1'
         with:
+          ruby-version: '2.7.3'
           bundler-cache: true
 
       - name: 'Setup poetry'
