Update sonarcloud inclusions & exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,6 @@ sonar.projectKey=AccessToTheCloud_website
 sonar.organization=accesstothecloud
 
 sonar.python.version=3.10
+
+sonar.sources=jekyll,azure_function_apps
+sonar.exclusions=**/vendor/**
