--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -7,7 +7,7 @@ baseurl: # Not needed because we're not hosting the site in a subfolder
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /images/logo_with_no_text.svg
-description: Product marketing template for Jekyll.
+description: Professional software engineering service based in Australia.
 author:
   name: My Name
   email: mail@tombarone.net
